    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/firefox.menu.in
    - update debian/firefox.xml.in
  * Simplify generating the Apport blacklist file to remove a superfluous 
    debian/rules target
    - rename debian/apport/blacklist => debian/apport/firefox.in
    - update debian/rules

  [ Alexander Sack <asac@linaro.org> ]
  * add support for mozilla breakpad symbols and in turn enable
    crashreporter   
    - add debian/patches/ftbfs_crashreporter.patch   
    - update debian/patches/series
    - update debian/control
    - update debian/rules

 -- Micah Gersten <micahg@ubuntu.com>  Mon, 09 Aug 2010 06:19:47 -0500

firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ H. Montoliu <hmontoliu@ubuntu.com> ]
  * fix LP: #361052 - firefox apport hook fails to retrieve pluginreg.dat file
  * update debian/apport/firefox-3.6.py - removed unused code and minor refactoring.

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Mass update from 3.1 to 3.6:
    * Renamed and updated
      - debian/abrowser-3.1.desktop => debian/abrowser-3.6.desktop
      - debian/apport/firefox-3.1.py => debian/apport/firefox-3.6.py
      - debian/firefox-3.1-final.desktop => debian/firefox-3.6-final.desktop
      - debian/firefox-3.1-gnome-support.postinst.in => debian/firefox-3.6-gnome-support.postinst.in
      - debian/firefox-3.1-minefield.desktop => debian/firefox-3.6-minefield.desktop
      - debian/firefox-3.1-restart-required.update-notifier => debian/firefox-3.6-restart-required.update-notifier
      - debian/firefox-3.1-shiretoko.desktop => debian/firefox-3.6-shiretoko.desktop
      - debian/firefox-3.1.install => debian/firefox-3.6.install
      - debian/firefox-3.1.links => debian/firefox-3.6.links
      - debian/firefox-3.1.menu => debian/firefox-3.6.menu
      - debian/mozclient/firefox-3.1.conf => debian/mozclient/firefox-3.6.conf
      - debian/mozclient/firefox-3.1.mk => debian/mozclient/firefox-3.6.mk