@@ -1,0 +1,3 @@
+debian/tmp-@APPNAME_OTHER@-branding/@LIBDIR@/icons @LIBDIR@
+debian/tmp-@APPNAME_OTHER@-branding/@LIBDIR@/chrome/icons @LIBDIR@/chrome
+debian/tmp-@APPNAME_OTHER@-branding/@LIBDIR@/chrome/awesome-* @LIBDIR@/chrome/
