@@ -1,0 +1,1 @@
+@LIBDIR@/icons/mozicon128.png usr/share/pixmaps/@APPNAME@.png
