@@ -1,3 +1,4 @@
+@LIBDIR@/distribution
 usr/lib/firefox-addons/extensions
 usr/lib/firefox-addons/plugins
 usr/lib/firefox-addons/searchplugins
