@@ -1,3 +1,12 @@
 ## /usr/bin/firefox-4.0 /usr/bin/firefox
-/usr/bin/@APPNAME@ /usr/bin/@APPNAME_OTHER@
-/usr/lib/firefox-addons/searchplugins /usr/lib/firefox-addons/searchplugins/common
+@LIBDIR@/firefox.sh usr/bin/@APPNAME@
+usr/bin/@APPNAME@ usr/bin/@APPNAME_OTHER@
+@LIBDIR@/@APPNAME@ @LIBDIR@/@APPNAME_OTHER@
+usr/lib/firefox-addons/searchplugins usr/lib/firefox-addons/searchplugins/common
+usr/lib/firefox-addons/extensions @LIBDIR@/extensions
+usr/lib/firefox-addons/plugins @LIBDIR@/plugins
+usr/lib/firefox-addons/searchplugins @LIBDIR@/searchplugins
+usr/lib/firefox-addons/searchplugins @LIBDIR@/distribution/searchplugins
+etc/@APPNAME@/pref @LIBDIR@/defaults/syspref
+etc/@APPNAME@/profile @LIBDIR@/defaults/profile
+usr/share/myspell/dicts @LIBDIR@/dictionaries
